--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       --text:#2a1a12;   --muted:#6b5a4b;
       --stroke:#e8e0d3; --card:#ffffffcc;
       --shadow:0 14px 30px #00000018; --radius:18px;
-      --glass:#fff8efc7;              /* header/blur */
-      --panel:#fffdf7e6;              /* drawer fondo */
+      --glass:#fff8efc7; --panel:#fffdf7e6;
       --btn-grad:linear-gradient(135deg,var(--olive),var(--coffee-2));
       --bg-grad:
         radial-gradient(900px 700px at 90% -10%, #b8c2a230 0%, transparent 60%),
@@ -30,8 +29,8 @@
       --olive:#c9d79a;  --sage:#8fa07a;
       --text:#efe9e4;   --muted:#cdbfb5;
       --stroke:#3a2f28; --card:#ffffff12;
-      --shadow:0 16px 40px #00000066; --glass:#15110fc7;
-      --panel:#1a1613e6;
+      --shadow:0 16px 40px #00000066;
+      --glass:#15110fc7; --panel:#1a1613e6;
       --btn-grad:linear-gradient(135deg,#b5c67e,#cfa486);
       --bg-grad:
         radial-gradient(900px 700px at 90% -10%, #7b865c25 0%, transparent 60%),
@@ -40,8 +39,7 @@
     }
 
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;color:var(--text);
-      background:var(--bg-grad);
+    html,body{margin:0;padding:0;color:var(--text);background:var(--bg-grad);
       font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif}
     a{color:inherit;text-decoration:none}
     .container{max-width:1100px;margin:0 auto;padding:28px 20px}
@@ -53,22 +51,21 @@
     .brand{display:flex;align-items:center;gap:10px;font-weight:700;color:var(--coffee)}
     .logo{width:28px;height:28px;border-radius:8px;background:linear-gradient(135deg,var(--olive),var(--coffee-2));box-shadow:var(--shadow)}
 
-    /* BUTTONS */
+    /* BOTONES */
     .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:14px;
       border:1px solid var(--stroke);background:linear-gradient(135deg,#ffffffc8,#fff7e8b0);box-shadow:var(--shadow)}
     body.dark .btn{background:linear-gradient(135deg,#ffffff20,#ffffff10)}
     .btn:hover{transform:translateY(-1px)}
     .cta{border:none;background:var(--btn-grad);color:#fff}
 
-    /* DESKTOP NAV */
+    /* NAV DESKTOP */
     .navlinks{display:flex;gap:18px;align-items:center}
     .navlinks a{padding:10px;border-radius:10px;opacity:.95}
     .navlinks a:hover{background:#0000000a}
-    /* Toggle dark */
     .toggle{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid var(--stroke);background:transparent}
     .toggle svg{width:18px;height:18px}
 
-    /* HAMBURGER */
+    /* HAMBURGUESA */
     .hamburger{display:none;position:relative;width:42px;height:42px;border:1px solid var(--stroke);
       border-radius:12px;background:#ffffff60}
     body.dark .hamburger{background:#ffffff12}
@@ -81,15 +78,13 @@
     .hamburger[aria-expanded="true"] span:nth-child(2){opacity:0}
     .hamburger[aria-expanded="true"] span:nth-child(3){transform:translateY(-8px) rotate(-45deg)}
 
-    /* MOBILE PANEL */
+    /* DRAWER MÓVIL */
     .overlay{position:fixed;inset:0;background:#00000040;opacity:0;pointer-events:none;transition:.25s;z-index:55}
-    .drawer{
-      position:fixed;top:0;right:-80%;width:78%;max-width:360px;height:100%;
+    .drawer{position:fixed;top:0;right:-80%;width:78%;max-width:360px;height:100%;
       background:var(--panel);backdrop-filter:blur(12px) saturate(1.4);
       border-left:1px solid var(--stroke);box-shadow:var(--shadow);
       padding:22px 24px 28px;display:flex;flex-direction:column;gap:16px;
-      overflow-y:auto;scroll-behavior:smooth;transition:transform .3s ease, right .3s ease;z-index:56
-    }
+      overflow-y:auto;scroll-behavior:smooth;transition:transform .3s ease, right .3s ease;z-index:56}
     .drawer a{padding:14px 10px;border-radius:12px;font-size:17px;color:var(--coffee);font-weight:500}
     body.dark .drawer a{color:#efe9e4}
     .drawer a:hover{background:#00000008}
@@ -101,13 +96,7 @@
     .menu-open .drawer{right:0;animation:slideIn .3s ease forwards}
     @keyframes slideIn{from{transform:translateX(30px);opacity:0}to{transform:translateX(0);opacity:1}}
 
-    /* HERO & SECTIONS */
-    .hero{padding:72px 0}
-    .hero h1{font-family:"Playfair Display",serif;font-size:56px;line-height:1.05;margin:0 0 12px;color:var(--coffee)}
-    body.dark .hero h1{color:#efe9e4}
-    .hero p{max-width:760px;color:var(--muted);margin:0 0 22px;font-size:18px}
-    .tag{display:inline-block;margin-bottom:14px;padding:6px 12px;border-radius:999px;border:1px solid var(--stroke);background:#fff6e7;color:var(--coffee);font-size:12px;letter-spacing:.2px}
-    body.dark .tag{background:#ffffff12;color:#efe9e4}
+    /* LAYOUT / SECCIONES */
     section{padding:38px 0}
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:18px}
     .card{grid-column:span 12;background:var(--card);border:1px solid var(--stroke);border-radius:var(--radius);padding:22px;box-shadow:var(--shadow)}
@@ -122,17 +111,24 @@
       .navlinks{display:none}
       .hamburger{display:inline-block}
     }
+
+    /* HERO */
+    .hero{padding:72px 0}
+    .hero h1{font-family:"Playfair Display",serif;font-size:56px;line-height:1.05;margin:0 0 12px;color:var(--coffee)}
+    body.dark .hero h1{color:#efe9e4}
+    .hero p{max-width:760px;color:var(--muted);margin:0 0 22px;font-size:18px}
+    .tag{display:inline-block;margin-bottom:14px;padding:6px 12px;border-radius:999px;border:1px solid var(--stroke);background:#fff6e7;color:var(--coffee);font-size:12px}
+    body.dark .tag{background:#ffffff12;color:#efe9e4}
+
+    /* TITULARES Y TEXTO */
     h2{font-family:"Playfair Display",serif;font-size:34px;margin:0 0 10px;color:var(--coffee)}
     body.dark h2{color:#efe9e4}
     .muted{color:var(--muted)}
     .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid var(--stroke);color:var(--coffee);background:#fff4e1;font-size:12px}
-    body.dark .pill{background:#ffffff12;color:#efe9e4}
     .price{font-size:34px;font-weight:700;background:linear-gradient(135deg,var(--olive),var(--coffee));-webkit-background-clip:text;background-clip:text;color:transparent}
-    .list{margin:12px 0 0;padding:0 0 0 16px;color:var(--muted)}
-    footer{padding:36px 0;border-top:1px solid var(--stroke);color:var(--muted);text-align:center}
-    .tiny{font-size:12px;opacity:.85}
+    .list{margin:12px 0 0;padding-left:16px;color:var(--muted)}
 
-    /* —— Colores por plan + destacado —— */
+    /* —— PLANES (LIGHT) —— */
     .pricing .card.plan{position:relative;transition:.2s;border-radius:20px}
     .pricing .plan:hover{transform:translateY(-2px)}
     .pricing .plan .pill{background:#ffffff20}
@@ -155,19 +151,48 @@
       box-shadow:0 18px 40px #0000001f;
     }
     .plan--best.featured{outline:2px solid #b8c27a;outline-offset:2px;transform:translateY(-2px)}
-    .ribbon{
-      position:absolute;top:14px;right:14px;padding:6px 10px;font-size:12px;font-weight:600;
-      background:linear-gradient(135deg,var(--olive),var(--coffee-2));color:#fff;border-radius:999px;box-shadow:0 8px 20px #00000022
-    }
+    .ribbon{position:absolute;top:14px;right:14px;padding:6px 10px;font-size:12px;font-weight:600;background:linear-gradient(135deg,var(--olive),var(--coffee-2));color:#fff;border-radius:999px;box-shadow:0 8px 20px #00000022}
     .plan--best .price{font-size:38px}
-    @media(max-width:719px){
-      .pricing .grid{display:flex;flex-direction:column}
-      .pricing .plan.featured{order:-1}
+    @media(max-width:719px){.pricing .grid{display:flex;flex-direction:column}.pricing .plan.featured{order:-1}}
+
+    /* —— PLANES (DARK) con diferenciación —— */
+    body.dark .card{background:#1f1b18;border-color:#3a2f28;}
+    body.dark .plan--basico{
+      background: linear-gradient(180deg, #1e1b18 0%, #141210 100%);
+      border-color: #3b312a;
+      box-shadow: 0 6px 18px #00000055;
     }
+    body.dark .plan--inter{
+      background: linear-gradient(180deg, #262116 0%, #1b1712 100%);
+      border-color: #5e4e36;
+      box-shadow: 0 6px 18px #00000066;
+    }
+    body.dark .plan--popular{
+      background: linear-gradient(180deg, #1f2417 0%, #15190f 100%);
+      border-color: #4b5a3a;
+      box-shadow: 0 6px 18px #00000055;
+    }
+    body.dark .plan--best{
+      background: linear-gradient(135deg, #2e331e 0%, #31261c 100%);
+      border-color: #7a6b4d;
+      box-shadow: 0 12px 32px #00000088;
+    }
+    body.dark .plan--best.featured{outline:2px solid #c9d79a;outline-offset:2px;transform:translateY(-3px)}
+    body.dark .plan h3,
+    body.dark .plan .price,
+    body.dark .plan .list,
+    body.dark .plan .pill{color:#efe9e4;}
+    body.dark .plan .price{
+      background: linear-gradient(135deg, #d9e69e, #e9c8a3);
+      -webkit-background-clip:text;background-clip:text;color:transparent;
+    }
+    body.dark .pill{background:#ffffff14;border-color:#4a3c32;}
+    body.dark .ribbon{background:linear-gradient(135deg,#c4d58b,#cfa486);color:#1a1614;}
+
   </style>
 </head>
 <body>
-  <!-- Overlay y Drawer (móvil) -->
+  <!-- Overlay & Drawer (móvil) -->
   <div class="overlay" id="overlay" aria-hidden="true"></div>
   <nav class="drawer" id="drawer" aria-label="Menú">
     <button class="closebtn" id="closeDrawer" aria-label="Cerrar menú">
@@ -186,21 +211,15 @@
         <div class="logo"></div><span>Dollies <span style="opacity:.75">Priv</span></span>
       </div>
 
-      <!-- Nav escritorio -->
       <div class="navlinks" aria-label="Navegación principal">
         <a href="#nosotros">Sobre nosotros</a>
         <a href="#precios">Precios</a>
         <a href="#servicios">Servicios</a>
         <a href="#contacto">Contacto</a>
         <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Comprar</a>
-        <!-- Toggle tema (desktop) -->
-        <button class="toggle" id="themeToggle" aria-pressed="false" title="Cambiar tema">
-          <svg id="iconSun" viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="4" stroke-width="2"/><path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" stroke-width="2" stroke-linecap="round"/></svg>
-          <svg id="iconMoon" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M21 12.79A9 9 0 1111.21 3a7 7 0 009.79 9.79z" stroke-width="2"/></svg>
-        </button>
+        <button class="toggle" id="themeToggle" aria-pressed="false" title="Cambiar tema">🌓</button>
       </div>
 
-      <!-- Botón hamburguesa (móvil) -->
       <button class="hamburger" id="burger" aria-label="Abrir menú" aria-controls="drawer" aria-expanded="false">
         <span></span><span></span><span></span>
       </button>
@@ -225,18 +244,21 @@
       <div class="grid">
         <article class="card">
           <h2>¿Qué somos?</h2>
-          <p class="muted"><strong>Dollies Priv</strong> ofrece contenido actualizado cada día y herramientas para tu
-            experiencia: métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas de comunidad. Nuestro
-            foco es la <strong>accesibilidad</strong> y el <strong>buen soporte</strong>.</p>
+          <p class="muted">
+            <strong>Dollies Priv</strong> ofrece contenido actualizado cada día y herramientas para tu experiencia:
+            métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas de comunidad.
+            Nuestro foco es la <strong>accesibilidad</strong> y el <strong>buen soporte</strong>.
+          </p>
         </article>
       </div>
     </section>
 
-    <!-- PRECIOS (con destacado) -->
+    <!-- PRECIOS -->
     <section id="precios" class="pricing">
       <h2>Planes de precios</h2>
       <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a vos.</p>
 
+      <!-- Imagen estética -->
       <div style="text-align:center; margin: 22px 0;">
         <img src="https://i.pinimg.com/736x/28/db/88/28db88ee57a62135f30b62b3e8d953f5.jpg"
              alt="Dollies Priv — estética café/oliva"
@@ -248,30 +270,42 @@
           <span class="pill">Básico</span>
           <h3>7 días</h3>
           <div class="price">18 Robux</div>
-          <ul class="list"><li>Acceso a contenido diario</li><li>Soporte por Telegram</li></ul>
+          <ul class="list">
+            <li>Acceso a contenido diario</li>
+            <li>Soporte por Telegram</li>
+          </ul>
         </div>
 
         <div class="card plan plan--inter">
           <span class="pill">Intermedio</span>
           <h3>18 días</h3>
           <div class="price">22 Robux</div>
-          <ul class="list"><li>Todo del plan Básico</li><li>Actualizaciones priorizadas</li></ul>
+          <ul class="list">
+            <li>Todo del plan Básico</li>
+            <li>Actualizaciones priorizadas</li>
+          </ul>
         </div>
 
         <div class="card plan plan--popular">
           <span class="pill">Popular</span>
           <h3>30 días</h3>
           <div class="price">40 Robux</div>
-          <ul class="list"><li>Acceso completo</li><li>Soporte prioritario</li></ul>
+          <ul class="list">
+            <li>Acceso completo</li>
+            <li>Soporte prioritario</li>
+          </ul>
         </div>
 
-        <!-- ★ DESTACADO 45 días -->
+        <!-- ★ DESTACADO -->
         <div class="card plan plan--best featured">
           <span class="ribbon">★ Recomendado</span>
           <span class="pill">Best Value</span>
           <h3>45 días</h3>
           <div class="price">50 Robux</div>
-          <ul class="list"><li>Todo lo anterior</li><li>Beneficios extra de comunidad</li></ul>
+          <ul class="list">
+            <li>Todo lo anterior</li>
+            <li>Beneficios extra de comunidad</li>
+          </ul>
         </div>
       </div>
 
@@ -290,12 +324,12 @@
           <p class="muted">Obtención automatizada de datos <strong>públicos</strong> y permitidos para análisis y organización.</p>
         </div>
         <div class="card">
-          <h3>Automatizaciones & extras</h3>
-          <p class="muted">Flujos automáticos, alertas y utilidades adicionales para mejorar tu experiencia.</p>
+          <h3>Seguridad & antifraude</h3>
+          <p class="muted">Detección y prevención de actividades fraudulentas para una experiencia más segura.</p>
         </div>
         <div class="card">
-          <h3>Soporte & comunidad</h3>
-          <p class="muted">Acompañamiento por Telegram y dinámicas de comunidad. Nada de actividades ilegales o dañinas.</p>
+          <h3>Extras</h3>
+          <p class="muted">Utilidades adicionales, soporte y beneficios de comunidad incluidos en los planes.</p>
         </div>
       </div>
     </section>
@@ -353,33 +387,15 @@
 
     // ====== Toggle Tema (Dark / Light) ======
     const toggle = document.getElementById('themeToggle');
-    const iconSun = document.getElementById('iconSun');
-    const iconMoon = document.getElementById('iconMoon');
-
-    // Cargar preferencia guardada o preferencia del sistema
     const saved = localStorage.getItem('theme');
     if (saved === 'dark' || (!saved && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
       document.body.classList.add('dark');
       toggle?.setAttribute('aria-pressed','true');
-      iconSun.style.display='none'; iconMoon.style.display='inline';
-    }
-
-    function setTheme(dark){
-      if(dark){
-        document.body.classList.add('dark');
-        localStorage.setItem('theme','dark');
-        toggle?.setAttribute('aria-pressed','true');
-        iconSun.style.display='none'; iconMoon.style.display='inline';
-      }else{
-        document.body.classList.remove('dark');
-        localStorage.setItem('theme','light');
-        toggle?.setAttribute('aria-pressed','false');
-        iconMoon.style.display='none'; iconSun.style.display='inline';
-      }
     }
     toggle?.addEventListener('click', ()=>{
-      const isDark = document.body.classList.contains('dark');
-      setTheme(!isDark);
+      const isDark = document.body.classList.toggle('dark');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      toggle?.setAttribute('aria-pressed', isDark ? 'true' : 'false');
     });
   </script>
 </body>
