--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dollies Priv — Subscripciones</title>
-  <meta name="description" content="Dollies Priv — dolls frescos a diario, planes accesibles y soporte por Telegram.">
+  <meta name="description" content="Dollies Priv — bins frescos a diario, planes accesibles.">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
     /* —— PALETA (LIGHT) —— */
@@ -231,8 +231,8 @@
     <section class="hero">
       <span class="tag">Actualizamos a diario</span>
       <h1>Priv de confianza, <br>precios accesibles.</h1>
-      <p>En <strong>Dollies Priv</strong> ofrecemos <strong>dolls frescos a diario</strong> y beneficios como
-        métodos, mini cursos, cuentas premium públicas, dinámicas y más — con soporte directo por Telegram.</p>
+      <p>En <strong>Dollies Priv</strong> ofrecemos <strong>bins frescos a diario</strong> y beneficios como
+        métodos, mini cursos, cuentas premium públicas.</p>
       <div style="display:flex;gap:12px;flex-wrap:wrap">
         <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Iniciar compra en Telegram</a>
         <a class="btn" href="#precios">Ver planes</a>
@@ -247,7 +247,7 @@
           <p class="muted">
             <strong>Dollies Priv</strong> ofrece contenido actualizado cada día y herramientas para tu experiencia:
             métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas de comunidad.
-            Nuestro foco es la <strong>accesibilidad</strong> y el <strong>buen soporte</strong>.
+            Nos caracterizamos por nuestra <strong>accesibilidad</strong> y el <strong>buen ambiente</strong>.
           </p>
         </article>
       </div>
@@ -256,7 +256,7 @@
     <!-- PRECIOS -->
     <section id="precios" class="pricing">
       <h2>Planes de precios</h2>
-      <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a vos.</p>
+      <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a ti</p>
 
       <!-- Imagen estética -->
       <div style="text-align:center; margin: 22px 0;">
@@ -267,44 +267,44 @@
 
       <div class="grid">
         <div class="card plan plan--basico">
-          <span class="pill">Básico</span>
+          <span class="pill">Basic-Plan</span>
           <h3>7 días</h3>
           <div class="price">18 Robux</div>
           <ul class="list">
-            <li>Acceso a contenido diario</li>
-            <li>Soporte por Telegram</li>
+            <li>Plan Basico</li>
+            <li>Acceso a Scam, Extras, Scrapper</li>
           </ul>
         </div>
 
         <div class="card plan plan--inter">
-          <span class="pill">Intermedio</span>
+          <span class="pill">Standar-Plan</span>
           <h3>18 días</h3>
           <div class="price">22 Robux</div>
           <ul class="list">
-            <li>Todo del plan Básico</li>
-            <li>Actualizaciones priorizadas</li>
+            <li>Plan Standar</li>
+            <li>Acceso a Scam, Extras, Scrapper</li>
           </ul>
         </div>
 
         <div class="card plan plan--popular">
-          <span class="pill">Popular</span>
+          <span class="pill">Pro-plan</span>
           <h3>30 días</h3>
           <div class="price">40 Robux</div>
           <ul class="list">
-            <li>Acceso completo</li>
-            <li>Soporte prioritario</li>
+            <li>Plan Pro</li>
+            <li>Acceso a Scam, Extras, Scrapper</li>
           </ul>
         </div>
 
         <!-- ★ DESTACADO -->
         <div class="card plan plan--best featured">
           <span class="ribbon">★ Recomendado</span>
-          <span class="pill">Best Value</span>
+          <span class="pill">Max-plan</span>
           <h3>45 días</h3>
           <div class="price">50 Robux</div>
           <ul class="list">
-            <li>Todo lo anterior</li>
-            <li>Beneficios extra de comunidad</li>
+            <li>Plan Max</li>
+            <li>Acceso a Scam, Extras, Scrapper</li>
           </ul>
         </div>
       </div>
@@ -320,16 +320,16 @@
       <h2>Servicios incluidos</h2>
       <div class="grid">
         <div class="card">
-          <h3>Scraper (datos públicos)</h3>
-          <p class="muted">Obtención automatizada de datos <strong>públicos</strong> y permitidos para análisis y organización.</p>
+          <h3>Scrapper</h3>
+          <p class="muted">Dropper de tarjetas con<strong>status</strong>sirve para sacar tus propios bins</p>
         </div>
         <div class="card">
-          <h3>Seguridad & antifraude</h3>
-          <p class="muted">Detección y prevención de actividades fraudulentas para una experiencia más segura.</p>
+          <h3>Scam</h3>
+          <p class="muted">Dropper de tarjetas con<strong>status</strong><strong>gateway</strong><strong>response</strong> sirve para compras streaming y reales. </p>
         </div>
         <div class="card">
           <h3>Extras</h3>
-          <p class="muted">Utilidades adicionales, soporte y beneficios de comunidad incluidos en los planes.</p>
+          <p class="muted">Dropper de extras de bins.</p>
         </div>
       </div>
     </section>
