Fix HTML formatting in description paragraph

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </div>
         <div class="card">
           <h3>Scam</h3>
-          <p class="muted">Dropper de tarjetas con<strong>status, </strong><strong>gateway, </strong><strong>,response </strong> sirve para compras streaming y reales. </p>
+          <p class="muted">Dropper de tarjetas con <strong>status, </strong><strong>gateway, </strong><strong>response </strong> sirve para compras streaming y reales. </p>
         </div>
         <div class="card">
           <h3>Extras</h3>
