--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dollies Priv — Subscripciones</title>
-  <meta name="description" content="Dollies Priv — bins frescos a diario, planes accesibles.">
+  <title>Dollies Priv</title>
+  <meta name="description" content="Dollies Priv — bins frescos a diario y planes accesibles.">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
     /* —— PALETA (LIGHT) —— */
@@ -268,10 +268,10 @@
 
   <main class="container">
     <section class="hero" id="hero">
-      <span class="tag">Actualizamos a diario</span>
+      <span class="tag">Bins frescos a diario</span>
       <h1>Priv de confianza, <br>precios accesibles.</h1>
-      <p>En <strong>Dollies Priv</strong> ofrecemos <strong>bins frescos y verificados a diario</strong> para asegurar la máxima tasa de éxito en todos tus métodos, además de beneficios como
-        métodos, mini cursos, cuentas premium públicas.</p>
+      <p>En <strong>Dollies Priv</strong> ofrecemos <strong>bins frescos a diario</strong>además de beneficios como
+        métodos, mini cursos, cuentas premium públicas. </p>
       <div style="display:flex;gap:12px;flex-wrap:wrap">
         <a class="btn cta" href="https://t.me/dollies_subsbot" target="_blank" rel="noopener">Iniciar compra en Telegram</a>
         <a class="btn" href="#precios">Ver planes</a>
@@ -283,8 +283,8 @@
         <article class="card">
           <h2>¿Qué somos?</h2>
           <p class="muted">
-            <strong>Dollies Priv</strong> ofrece contenido actualizado cada día y herramientas para tu experiencia:
-            métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas de comunidad.
+            <strong>Dollies Priv</strong> ofrecemos:
+            métodos, mini cursos, beneficios en cuentas premium públicas y dinámicas.
             Nos caracterizamos por nuestra <strong>accesibilidad</strong> y el <strong>buen ambiente</strong>.
           </p>
         </article>
@@ -293,7 +293,7 @@
 
     <section id="precios" class="pricing">
       <h2>Planes de precios</h2>
-      <p class="muted">Pagá en <strong>Robux</strong>. Elegí el que mejor se adapte a ti. **Todos los planes incluyen acceso completo a todos los servicios.**</p>
+      <p class="muted">Pagá en <strong>Robux</strong>. Escoge el que mejor se adapte a ti. **Todos los planes incluyen acceso completo a todos los servicios.**</p>
 
       <div style="text-align:center; margin: 22px 0;">
         <img src="https://i.pinimg.com/736x/28/db/88/28db88ee57a62135f30b62b3e8d953f5.jpg"
@@ -310,7 +310,7 @@
           <ul class="list">
             <li>Duración: 7 días</li>
             <li>Acceso completo a todos los Droppers (Scam, Extras, Scrapper).</li>
-            <li>Ideal para probar el servicio.</li>
+            <li>Ideal para probar por una semana.</li>
           </ul>
         </div>
 
@@ -321,7 +321,7 @@
           <ul class="list">
             <li>Duración: 18 días</li>
             <li>Acceso completo a todos los Droppers.</li>
-            <li>Mayor duración a mejor costo/día.</li>
+            <li>Mayor duracion y acceso.</li>
           </ul>
         </div>
 
@@ -332,19 +332,19 @@
           <ul class="list">
             <li>Duración: 30 días (1 mes)</li>
             <li>Acceso completo a todos los Droppers.</li>
-            <li>Conveniente para uso mensual constante.</li>
+            <li>Uso mensual.</li>
           </ul>
         </div>
 
         <div class="card plan plan--best featured">
           <span class="ribbon">★ Mejor Valor</span>
           <span class="pill">Max-plan</span>
-          <h3>45 días <span class="saving-tag">¡Máximo ahorro!</span></h3>
+          <h3>45 días <span class="saving-tag">¡Máximo Plan!</span></h3>
           <div class="price">50 Robux</div>
           <ul class="list">
             <li>Duración: 45 días</li>
             <li>Acceso completo a todos los Droppers.</li>
-            <li>La mejor opción a largo plazo y la más económica por día.</li>
+            <li>Mejor opcion</li>
           </ul>
         </div>
       </div>
@@ -363,7 +363,7 @@
             <svg class="service-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
             Scrapper
           </h3>
-          <p class="muted">Dropper de tarjetas con<strong>status</strong>sirve para sacar tus propios bins</p>
+          <p class="muted">Dropper de tarjetas con <strong>status</strong>sirve para sacar tus propios bins</p>
         </div>
         <div class="card">
           <h3>
@@ -382,7 +382,7 @@
         
         <a class="reference-card" href="https://t.me/wdolliespriv" target="_blank" rel="noopener">
           <h3>¡Mira nuestras referencias!</h3>
-          <p class="muted">Ver cientos de comprobantes de pago y comentarios en nuestro canal oficial de Telegram: <strong>t.me/wdolliespriv</strong></p>
+          <p class="muted">Ver referencias de nuestros bins y metodos en: <strong>t.me/wdolliespriv</strong></p>
         </a>
         
       </div>
@@ -401,14 +401,14 @@
         </a>
         <a class="card" href="https://t.me/vipperina" target="_blank" rel="noopener">
           <h3>@vipperina</h3>
-          <p class="muted">Soporte y consultas</p>
+          <p class="muted">Contacto directo</p>
         </a>
       </div>
     </section>
   </main>
 
   <footer>
-    <div class="container">© <span id="y"></span> Dollies Priv · Todos los derechos reservados</div>
+    <div class="container">© <span id="y"></span> Dollies Priv</div>
   </footer>
 
   <script>
