--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     <section id="precios" class="pricing">
       <h2>Planes de precios</h2>
-      <p class="muted">Pagá en <strong>Robux</strong>. Escoge el que mejor se adapte a ti. **Todos los planes incluyen acceso completo a todos los servicios.**</p>
+      <p class="muted">Pagá en <strong>Robux</strong>. Escoje el que mejor se adapte a ti. **Todos los planes incluyen acceso completo a todos los servicios.**</p>
 
       <div style="text-align:center; margin: 22px 0;">
         <img src="https://i.pinimg.com/736x/28/db/88/28db88ee57a62135f30b62b3e8d953f5.jpg"
@@ -363,7 +363,7 @@
             <svg class="service-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
             Scrapper
           </h3>
-          <p class="muted">Dropper de tarjetas con <strong>status</strong>sirve para sacar tus propios bins</p>
+          <p class="muted">Dropper de tarjetas con <strong> status</strong> sirve para sacar tus propios bins</p>
         </div>
         <div class="card">
           <h3>
@@ -382,7 +382,7 @@
         
         <a class="reference-card" href="https://t.me/wdolliespriv" target="_blank" rel="noopener">
           <h3>¡Mira nuestras referencias!</h3>
-          <p class="muted">Ver referencias de nuestros bins y metodos en: <strong>t.me/wdolliespriv</strong></p>
+          <p class="muted">Ve las referencias de nuestros bins y metodos en: <strong>t.me/wdolliespriv</strong></p>
         </a>
         
       </div>
